--- a/test/test1.html
+++ b/test/test1.html
@@ -108,7 +108,7 @@
     <form>
         <label for="fname">Full name:
         </label><br>
-        <input type = 'text' id = "fname"><br>
+        <input type = 'text' id = "fname" name="fname"><br>
     </form>
 </body>
 </html>
